# portaki-modules

./: .gitignore  .npmrc  .release-please-manifest.json  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/: CI.md  PULL_REQUEST_TEMPLATE.md
appliances/: README.md  package.json
checklist/: README.md  package.json
docs/: DEPLOYMENT.md  (+4 more)
modules/consumables/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/consumables/db/migrations/: 20260724190000_v1_consumables.sql
modules/consumables/i18n/: en-US.json  fr-FR.json
modules/consumables/src/: commands.rs  email_send.rs  entities.rs  ids.rs  labels.rs  level.rs  lib.rs  queries.rs  status.rs  storage.rs
modules/consumables/src/guest/: empty.rs  home.rs  load.rs  mod.rs
modules/consumables/src/host/: main.rs  mod.rs  report_ui.rs  stats.rs  stay.rs
modules/consumables/tests/: integration.rs
modules/pre-arrival-form/: CHANGELOG.md  Cargo.toml  README.md  portaki.module.json
modules/pre-arrival-form/backend/: pom.xml
modules/pre-arrival-form/backend/src/main/java/app/portaki/module/prearrivalform/: PreArrivalFormModule.java  PreArrivalFormModuleBackendConfiguration.java
modules/pre-arrival-form/db/migrations/: 20260724170000_v2_pre_arrival_extra_questions.sql
modules/pre-arrival-form/frontend/: README.md  package.json
modules/pre-arrival-form/i18n/: en-US.json  fr-FR.json
modules/pre-arrival-form/src/: commands.rs  config.rs  entities.rs  ids.rs  lib.rs  queries.rs  show_when.rs  storage.rs
modules/pre-arrival-form/src/guest/: home.rs  load.rs  mod.rs
modules/pre-arrival-form/src/host/: main.rs  stay.rs
modules/pre-arrival-form/tests/: integration.rs
modules/train/: Cargo.toml  README.md  package.json  portaki.module.json
modules/train/backend/: pom.xml
modules/train/backend/src/main/java/app/portaki/module/train/: TrainGatewayModule.java  TrainModuleBackendConfiguration.java
modules/train/i18n/: en-US.json  fr-FR.json
modules/train/src/: content.rs  lib.rs  manifest.test.ts  module.test.tsx
modules/train/src/guest/: detail.rs  empty.rs  home.rs  mod.rs
modules/train/tests/: integration.rs
(+350 files in other folders)
